--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,6 @@ ion-menu.md ion-content {
   --padding-top: 20px;
   --padding-bottom: 20px;
 }
-
 ion-menu.md ion-list {
   padding: 20px 0;
 }
@@ -116,4 +115,50 @@ ion-note {
 
 ion-item.selected {
   --color: var(--ion-color-primary);
+}
+
+.user_main_div{
+  padding-top:50px;
+
+  .user_div{
+    height:110px;
+    width:100px;
+    border-radius: 5px;
+    border:3px solid white;
+    display:block;
+    margin:auto;
+    background-position: top;
+  }
+
+  .username{
+    display: block;
+    margin-top:20px;
+    font-weight: 600;
+    font-size: 18px;
+    text-align: center;
+    color:white;
+  }
+}
+
+
+.bg_image{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#inbox-list{
+  background:transparent;
+
+  ion-item{
+    --background:transparent;
+
+    ion-icon{
+      color:white;      
+    }
+
+    ion-label{
+      color:white; 
+    }
+  }
 }
